add calendar component

--- a/index.html
+++ b/index.html
@@ -8,8 +8,11 @@
     <link rel="stylesheet" href="https://cdn.staticfile.org/animate.css/4.1.1/animate.min.css">
     <link rel="stylesheet" href="https://cdn.staticfile.org/font-awesome/5.15.4/css/all.min.css">
     <link rel="stylesheet" href="https://cdn.staticfile.org/bulma/0.9.4/css/bulma.min.css">
+    <link rel="stylesheet" href="https://doc.mh-s.de/bulma-calendar/assets/css/bulma-calendar.min.css">
     <link data-trunk rel="sass" href="index.scss">
     <script src="https://cdn.staticfile.org/Chart.js/3.7.1/chart.min.js"></script>
+    <script src="https://doc.mh-s.de/bulma-calendar/assets/js/bulma-calendar.min.js"></script>
 </head>
+
 
 </html>
